fixed z-index of text

--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ body {
   height: 50px;
   z-index: 1;
 }
+#text{
+  z-index: 1;
+}
 
 #weather {
   font-family: "Pixel", monospace;
